// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - ui - ln - Heading Rendering by level renders default level (undefined) as h4 with default structure 1`] = `
<h4
  class="font-primary text-subheading-md text-left"
>
  <span>
    Default Heading
  </span>
</h4>
`;

exports[`components - ui - ln - Heading Rendering by level renders level 1 as h2 with correct structure 1`] = `
<h2
  class="font-primary font-w-bold text-subheading-lg text-left"
>
  <span>
    Level 1 Heading
  </span>
</h2>
`;

exports[`components - ui - ln - Heading Rendering by level renders level 2 as h3 with correct structure 1`] = `
<h3
  class="font-primary text-subheading-lg text-left"
>
  <span>
    Level 2 Heading
  </span>
</h3>
`;

exports[`components - ui - ln - Heading Rendering by level renders level 3 (default) as h4 with correct structure 1`] = `
<h4
  class="font-primary font-w-bold text-subheading-md text-center"
>
  <span>
    Level 3 Heading
  </span>
</h4>
`;

exports[`components - ui - ln - Heading Rendering by level renders level 4 as h4 with underline 1`] = `
<h4
  class="font-primary text-subheading-md text-left"
>
  <span>
    Level 4 Underline
  </span>
</h4>
`;
